--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node tests/validator.test.js",
+    "lint": "echo \"Linting not configured yet\"",
+    "build": "echo \"Build process not needed for this project\"",
+    "clean": "echo \"Cleaning temporary files...\"",
+    "setup": "node scripts/setup.js"
   },
   "keywords": [
     "english",
@@ -30,6 +35,7 @@
     "mysql2": "^3.6.0"
   },
   "devDependencies": {
+    "jsdom": "^22.1.0",
     "nodemon": "^3.0.1"
   }
 }
